<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aldofieuw.android.p2scorekeeper.MainActivity">
    <!--TODO: make persistence when turning device orientation
    http://stackoverflow.com/questions/151777/saving-android-activity-state-using-save-instance-state?answertab=votes#tab-top
    -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--Type word-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <TextView
                android:id="@+id/typeWord"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingTop="16dp"
                android:textAlignment="center" />

            <EditText
                android:id="@+id/word_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="..."
                android:textAlignment="center" />

            <Button
                android:id="@+id/submit"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:onClick="submitWord"
                android:text="Enter"
                android:textAlignment="center" />


        </LinearLayout>

        <!--Triple, double, blanco and bonus-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!--set specification for that letter-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/letterScore"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="More"
                android:theme="@style/AppTheme.Button"
                android:visibility="gone" />
            <!--set specification for that word-->
            <LinearLayout
                android:id="@+id/wordValues"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:orientation="vertical"
                android:paddingBottom="16dp"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:paddingStart="16dp"
                android:visibility="gone">
                <!--double-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"

                        android:text="@string/double_word_score"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/doubleMinus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:onClick="doubleMinus"
                            android:text="@string/minus"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/doublePoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/zero"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/doublePlus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:onClick="doublePlus"
                            android:text="@string/plus"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
                <!--triple-->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/triple_word_score"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/tripleMinus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:onClick="tripleMinus"
                            android:text="@string/minus"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/triplePoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/zero"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/triplePlus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:onClick="triplePlus"
                            android:text="@string/plus"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>
                <!--bingo-->
                <!--TODO: max 1 time bingo and only when using a 7 letter word-->
                <LinearLayout
                    android:id="@+id/bonus"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:visibility="gone">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/bingo"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/bonusMinus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:onClick="bonusMinus"
                            android:text="@string/minus"
                            android:textSize="18sp" />

                        <TextView
                            android:id="@+id/bonusPoints"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:padding="8dp"
                            android:text="@string/zero"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/bonusPlus"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:onClick="bonusPlus"
                            android:text="@string/plus"
                            android:textAlignment="center"
                            android:textSize="18sp" />
                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <!--Show score and how it's calculated-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginTop="16dp"
                android:onClick="calculate"
                android:text="Calculate"
                android:textAlignment="center"
                android:theme="@style/AppTheme.Button"
                android:visibility="gone" />

            <TextView
                android:id="@+id/score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:textSize="64sp"
                tools:text="0" />

        </LinearLayout>

        <TextView
            android:id="@+id/addScoreTo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center" />

        <!--Players-->
        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!--devide by number of players-->
            <Button
                android:id="@+id/addToPlayer1"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addScoreToPlayer1"
                android:text="Player 1"
                android:visibility="gone" />

            <Button
                android:id="@+id/addToPlayer2"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addScoreToPlayer2"
                android:text="Player 2"
                android:visibility="gone" />

            <Button
                android:id="@+id/addToPlayer3"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addScoreToPlayer3"
                android:text="Player 3"
                android:visibility="gone" />

            <Button
                android:id="@+id/addToPlayer4"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="addScoreToPlayer4"
                android:text="Player 4"
                android:visibility="gone" />

        </LinearLayout>
        <!--TODO: when lanscape orientation place this at the right side-->
        <!--Show Total row-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/scorePlayer1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/scorePlayer2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/scorePlayer3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/scorePlayer4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="24sp"
                android:visibility="gone" />

        </LinearLayout>

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp"
            android:paddingTop="16dp">

            <Button
                android:id="@+id/endGame"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="endGame"
                android:text="End game" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
